[package]
name = "Viewer"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
druid = "0.8.3"
log = "0.4.22"
libc = "0.2"

[dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation", 
    "Win32_NetworkManagement_IpHelper", 
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock"
]
