[package]
name = "Warp"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies]
egui = "0.30.0"
log = "0.4.25"
libc = "0.2"
colog = "1.3.0"
tokio = { version = "1.43.0", features = [ "full" ] }
scrap = "0.5.0"
windows-capture = "1.4.2"

[dependencies.windows]
version = "0.59.0"
features = [
    "Win32_Foundation", 
    "Win32_NetworkManagement_IpHelper", 
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock"
]
